--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>gulp-scss-starter</title>
+        <title>HOMEFOR</title>
         <meta name="theme-color" content="#fff">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -23,11 +23,52 @@
         <link rel="apple-touch-icon" sizes="167x167" href="img/favicons/apple-touch-icon-167x167.png">
         <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
         <link rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png">
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
-        @@include("../blocks/modules/header/header.html")
+        <section class="section-main">
+            @@include("../blocks/modules/header/header.html")
+            <div class="wrapper">
+                <div class="slider-main">
+                    <div class="slider-main__item">
+                        <div class="main">
+                            <h1 class="main__title">Жилой комплекс HOMEFOR  -<br>это жизнь с комфортом</h1>
+                            <p class="main__text">Мы охватываем все важные этапы проектирование и строительство дома, а также повседневная эксплуатация после окончания</p>
+                            <button class="btn">подробнее</button>
+                        </div>
+                    </div>
+                    <div class="slider-main__item">
+                        <div class="main">
+                            <h1 class="main__title">Жилой комплекс HOMEFOR  -<br>это жизнь с комфортом</h1>
+                            <p class="main__text">Мы охватываем все важные этапы проектирование и строительство дома, а также повседневная эксплуатация после окончания</p>
+                            <button class="btn">подробнее</button>
+                        </div>
+                    </div>
+                    <div class="slider-main__item">
+                        <div class="main">
+                            <h1 class="main__title">Жилой комплекс HOMEFOR  -<br>это жизнь с комфортом</h1>
+                            <p class="main__text">Мы охватываем все важные этапы проектирование и строительство дома, а также повседневная эксплуатация после окончания</p>
+                            <button class="btn">подробнее</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         @@include("../blocks/modules/footer/footer.html")
+
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+        <script>
+            $('.slider-main').slick({
+                arrows: false,
+                dots: true
+            });
+        </script>
         <script src="js/main.js"></script>
         <script src="js/vendor.js"></script>
     </body>
